# MinusMinusEnergy

./: .gitignore  LICENSE  README.md  install.sh  keygen.cpp  package.json
client/backend/: a.out  euclid.hpp
doc/presentation/: presentationMinusMinusEnergy.tex
doc/report/: BETH report intro literature.tex  BETH report structure.tex  reportMinusMinusEnergy.tex  solution_design.tex
src/client/: DB_Template.db  database.db  fillBulkData.py  pythonmischt.py  sensorDataHandler.py  sensordatabase1.py
src/client/angular/: README.md  angular.json  package.json
src/client/backend/: CMakeLists.txt  README.md  a.out  claimToken.js  datahandler.cpp  datahandler.hpp  fillBulkData.py  lastdate  nt.js  package-lock.json  package.json  pstream.h  test.cpp
src/client/bc_backend/: CMakeLists.txt  sender.cpp  socket.kdev4  test.cpp
src/client/bc_backend/blockchain_app/: CMakeLists.txt  keygen.cpp
src/client/bc_backend/blockchain_app/include/: blockchain_state.hpp  de_serializable2.hpp  keygen.hpp  transaction.hpp
src/client/bc_backend/include/: hash.hpp  pcg_extras.hpp  siostream.hpp  socket_streambuf.hpp  socketio.hpp  udpsocket.hpp  util.hpp
src/client/bc_backend/include/crypt/: BigInt64.hpp  intrin.hpp  uint128_t.h
src/client/bc_backend/msc_supp/: uint128_t.cpp
src/client/bc_backend/socket_impl/: CMakeLists.txt  hash.cpp  siostream.cpp  socket_streambuf.cpp  socketio_posix.cpp  socketio_win32.cpp  udpsocket_posix.cpp
src/client/broker/: CMakeLists.txt  README.md  datahandler.hpp  fillBulkData.py  package.json
src/client/frontend/: MMEToken.json  README.md  app.js  claimToken.js  config.json  package.json
src/client/webserver/: app.js  package.json
src/demo/: README.md  package.json  run.js
src/smartcontracts/: .gitignore  README.md  package-lock.json  package.json  truffle-config.js
src/smartcontracts/contracts/: Bill.sol  Fond.sol  Fund.sol  MMEToken.sol  Token.sol
src/smartcontracts/examples/: claimToken.js  exampleSetup.js  fakeBill.js  test.js
src/smartcontracts/libraries/: ECDSA.sol
src/smartcontracts/migrations/: 2_deploy_contracts.js  2_deploy_fond.js  (+4 more)
(+39 files in other folders)
