cmake_minimum_required (VERSION 3.2)
set(CMAKE_EXPORT_COMPILE_COMMANDS true)
include_directories(include)
set(CMAKE_CXX_COMPILER "clang++")
IF(CMAKE_BUILD_TYPE MATCHES Release)
	set(CMAKE_CXX_FLAGS "-O3 -march=native -funroll-loops -fomit-frame-pointer -s")
endif()
add_subdirectory(socket_impl)
add_subdirectory(blockchain_app)
add_executable(toast test.cpp)
target_link_libraries(toast sio)
