cmake_minimum_required (VERSION 3.2)
set(CMAKE_EXPORT_COMPILE_COMMANDS true)
include_directories(include)
set(CMAKE_CXX_COMPILER "g++")
set(sdfsdf "-Wall")
IF(CMAKE_BUILD_TYPE MATCHES Release)
    set(CMAKE_CXX_FLAGS "-std=c++2a -O3 -march=native -funroll-loops -fomit-frame-pointer -ftree-vectorize -Wall -Wextra")
endif()
IF(CMAKE_BUILD_TYPE MATCHES Debug)
    set(CMAKE_CXX_FLAGS "-Wall -Wextra -g")
endif()
add_subdirectory(socket_impl)
add_subdirectory(blockchain_app)
add_executable(toast test.cpp)
add_executable(sender sender.cpp)
target_link_libraries(toast sio)
target_link_libraries(sender sio)
target_link_libraries(toast pthread)
target_link_libraries(sender pthread)
